# Rbot

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/config/: ai.rs  features.rs  mod.rs  proxy.rs  qq.rs
src/features/: ai.rs  mod.rs  news.rs
src/qq/: ai.rs  file.rs  group.rs  mod.rs  model.rs  send.rs  signature.rs  token.rs
src/utils/: download.rs  mod.rs  request.rs
