[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["default"]}
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = { version = "1.0.145", features = ["default"]}
serde = { version = "1.0.226", features = ["derive"] }
toml = { version = "0.9.6", features = ["default"]}
log = { version = "0.4.28", features = ["serde"]}
env_logger = { version = "0.11.8", features = ["default"]}
tokio-cron-scheduler = { version = "0.14.0", features = ["default"]}
chrono = "0.4.42"